--- a/locales/nb.yaml
+++ b/locales/nb.yaml
@@ -71,6 +71,17 @@ gui:
   midi_player_stop: "Stopp"
   midi_player_fastforward: "Spol frem"
 
+  progress_processing: "Resampling"
+  progress_cache_read: "Leser cache fra disk"
+  progress_cache_write: "Skriver cache til disk"
+  progress_cache_done: "Lastet fra disk-cache"
+  progress_load_transients: "Forhåndslaster transienter"
+  progress_load_ram: "Laster samples til RAM"
+  progress_parse_ini: "Tolker GrandOrgue INI"
+  progress_parse_xml: "Tolker XML"
+  progress_assemble_organ: "Monterer orgel"
+  progress_extract_samples: "Pakker ut samples"
+
 errors:
   midi_connect_fail: "Klarte ikke å koble til %{name}: %{err}"
   midi_fetch_fail: "Feil ved henting av MIDI-enheter: %{err}"
