--- a/locales/ro.yaml
+++ b/locales/ro.yaml
@@ -71,6 +71,17 @@ gui:
   midi_player_stop: "Stop"
   midi_player_fastforward: "Derulare înainte"
 
+  progress_processing: "Re-eșantionare"
+  progress_cache_read: "Citire cache de pe disc"
+  progress_cache_write: "Scriere cache pe disc"
+  progress_cache_done: "Încărcat din cache disc"
+  progress_load_transients: "Preîncărcare tranzitorii"
+  progress_load_ram: "Încărcare eșantioane în RAM"
+  progress_parse_ini: "Analiză GrandOrgue INI"
+  progress_parse_xml: "Analiză XML"
+  progress_assemble_organ: "Asamblare orgă"
+  progress_extract_samples: "Extragere eșantioane"
+
 errors:
   midi_connect_fail: "Conectare eșuată la %{name}: %{err}"
   midi_fetch_fail: "Eroare la preluarea dispozitivelor MIDI: %{err}"
