--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -71,6 +71,17 @@ gui:
   midi_player_stop: "Стоп"
   midi_player_fastforward: "Перемотать вперед"
 
+  progress_processing: "Ресемплинг"
+  progress_cache_read: "Чтение кэша с диска"
+  progress_cache_write: "Запись кэша на диск"
+  progress_cache_done: "Загружено из дискового кэша"
+  progress_load_transients: "Предзагрузка транзиентов"
+  progress_load_ram: "Загрузка семплів в RAM"
+  progress_parse_ini: "Парсинг GrandOrgue INI"
+  progress_parse_xml: "Парсинг XML"
+  progress_assemble_organ: "Сборка органа"
+  progress_extract_samples: "Извлечение семплов"
+
 errors:
   midi_connect_fail: "Не удалось подключиться к %{name}: %{err}"
   midi_fetch_fail: "Ошибка получения MIDI-устройств: %{err}"
